--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
   datasource:
-    url: jdbc:mysql://aa1r5ki3mw3v4q9.crqr2khb6ff5.eu-central-1.rds.amazonaws.com/chronos_dev5?useSSL=false
-    username: chronos_dev5
-    password: chronos_dev5
+    url: #
+    username: #
+    password: #
     initialization-mode: always
     platform: mysql
 
