--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,11 @@ spring:
       write-dates-as-timestamps: true
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
       dialect: org.hibernate.dialect.H2Dialect
     database-platform: org.hibernate.dialect.H2Dialect
   datasource:
-    url: jdbc:h2:~/test
+    url: jdbc:h2:~/test1
     username: admin
     password: admin
     #initialization-mode: always
